--- a/angular.json
+++ b/angular.json
@@ -82,9 +82,11 @@
             "assets": [
 
               {
-                "glob": "**/*",
-                "input": "public"
-              }
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+                }
+
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
